syntax = "proto3";

option csharp_namespace = "SnmpExample";

package example;

service MyProtoService {
  rpc SendPing (PingRequest) returns (PingReply);
}

message PingRequest {
  string requestString = 1;
}

message PingReply {
  string respondString = 1;
}
